# pan

./: Dockerfile.app  README.md  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
backend/: deno.json  main.ts
backend/src/: config.ts  router.ts  utils.ts
backend/src/services/: files.ts  library.ts  metadata.ts  processing.ts  sse.ts  stats.ts
backend/tests/: files_test.ts
frontend/: deno.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.js  main.ts  state.ts  types.ts
frontend/src/components/: filter-panel.ts  queue-dialog.ts  video-detail.ts  video-list.ts
tests/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
tests/e2e/: filters.spec.ts  home.spec.ts  playback.spec.ts
tests/playwright-report/: index.html
tests/unit/: components.test.ts  example.test.ts
worker/: Dockerfile  main.py  pyproject.toml  requirements.txt
